[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
name = "ruma-api-macros"
version = "0.1.0"

[dependencies]
quote = "0.3.15"
synom = "0.11.3"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.ruma-api]
git = "https://github.com/neosam/ruma-api"
branch = "hyper"

[dependencies.syn]
features = ["full"]
version = "0.11.11"

[dev-dependencies]
futures = "0.1.13"
serde = "1.0.4"
serde_derive = "1.0.4"
serde_json = "1.0.2"

[lib]
doctest = false
proc-macro = true
